Fix issue #6806: split javac and JVM options